2007-05-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/AutoProperties.cc (AutoProperties::parseTypeProperty): 
	Made _NET_WM_WINDOW_TYPE handling configurable by creating a new
	set of auto properties called TypeRules. If nothing is changed the old
	default behaviour is still there apart from geometry of desktop class
	is not yet working.

	* src/CfgParser.cc (CfgParser::parse_source_new): 
	Fix bug in configuration parses causing it to parse files 2 times
	when the first open was ok. Increased memory usage with 30% after
	startup on my setup.

2007-05-30  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::readMwmHints): 
	Fixed handling of _MOTIF_WM_HINTS to detect border/title only decors
	correctly. Still ignoring the handle, menu, iconify and maximize
	states as altering allowed actions probably is a bad idea.
	
2007-05-29  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.cc (PDecor::setBorderShape): 
	Add shaping of non-corner border windows. Closing #97
	(Thanks julien for reporting.)

pekwm-0.1.6 released

2007-05-28  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::giveInputFocus): 
	Minor tweaks on focusing looking at WM_TAKE_FOCUS hint for handling
	Java Swing applications and OpenOffice.org better. Closing #98
	(Thanks noizze for reporting.)
	
	* src/Client.cc (Client::Client): 
	Add setWmState call to NormalState if no WM_HINTS was set on the
	application to fix issues with xprop on netwmpager. Closing #33.
	(Thanks tuncer{.}ayaz{@}gmail{.}com for reporting.)

2007-03-28  Claes Nästén  <me{@}pekdon{.}net>

	* src/WindowManager.cc (WindowManager::RootWO::RootWO):
	Added setting of _NET_WM_PID and WM_CLIENT_MACHINE to the root window.

2007-03-10  Claes Nästén  <me{@}pekdon{.}net>

	* src/CfgParser.cc (CfgParser::variable_expand): 
	Fix missing expansion if environment variables.

2007-01-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.cc (Button::setState): 
	First commit in 2007, added shaping to buttons for stretched