@@ -1,5 +1,14 @@
 2007-05-31  Claes Nästén  <me{@}pekdon{.}net>
 
+	* data/autoproperties: 
+	Added type rules to autoproperties file.
+	Added removal of border and titlebar for customize toolbar dialog
+	in firefox.
+
+	* src/Frame.cc (Frame::applyAPGeometry): 
+	Change handling of auto properties geometry so < 1 in width/height
+	means screen width/height.
+
 	* src/AutoProperties.cc (AutoProperties::parseTypeProperty): 
 	Made _NET_WM_WINDOW_TYPE handling configurable by creating a new
 	set of auto properties called TypeRules. If nothing is changed the old
